  get_full_path()
	- Remove unneeded assert. (DLR)
	- Fix problem where only paths would be returned when both paths
	  and filenames should have been. (DLR)
  do_writeout()
	- For consistency, when saving a file with no name, don't allow
	  overwriting an existing file when in restricted mode. (DLR)
	- Fix problem where a file could sometimes be overwritten
	  without a warning prompt. (DLR)
- winio.c:
  do_replace_highlight()
	- Include the code to display zero-length matches even when
	  regex.h isn't found, as it can also be used to display
	  zero-length Unicode characters. (DLR)
- doc/rnano.1, doc/fr/rnano.1:
	- Add missing "(C)" to the copyright notice in the comments.
	  (DLR)
- doc/nano.texi:
	- Remove unneeded "." from the copyright notice in the comments.
	  (DLR)
- NEWS:
	- Add missing entries for nano 1.0.2 and 1.0.3, since 1.1.0
	  includes their changes. (DLR)

GNU nano 2.0.0 - 2006.11.06
- General:
	- Miscellaneous comment fixes. (DLR)
	- Add syntax for POV-Ray files.  New file doc/syntax/pov.nanorc;
	  changes to doc/nanorc.sample.in and doc/syntax/Makefile.am.
	  (Donnie Berkholz, minor tweaks by DLR)
- AUTHORS:
	- Update for the 2.0 branch of nano. (DLR)
- nano.spec.in:
	- Update links for the 2.0 branch of nano. (DLR)
	- Update for newer RPM-based distributions. (DLR, adapted from
	  the nano 1.3.12-1.1.spec file in Fedora Rawhide)
	- Delete the changelog section, as it hasn't been kept up to
	  date, and all its changes are documented here in any case.
	  (DLR)
- doc/faq.html:
	- Update links for the 2.0 branch of nano. (DLR)
- doc/nano.1, doc/nanorc.5, doc/rnano.1:
	- Add minor wording fixes. (DLR)
- doc/man/fr/nano.1, doc/man/fr/nanorc.5, doc/man/fr/rnano.1:
	- Updated manpage translations by Jean-Philippe Guérard.
- doc/nano.texi:
	- Add minor wording and punctuation fixes. (DLR)

GNU nano 1.9.99pre3 - 2006.10.25
- chars.c:
  nstrncasecmp()
	- When returning, use the "?" operator instead of an if/else
	  clause. (DLR)
- cut.c: